--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,10 @@
 .App {
   text-align: center;
+  background-color: rgb(255, 255, 255);
+  border: 2px black;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
@@ -35,4 +13,15 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.nejah{
+  color: rgb(0, 0, 0);
+  padding-top: 50px;
+}
+.name{
+  padding-top: 25px;
+}
+.profile{
+  padding-top: 550px;
 }
